Fix a wee little thing. Mobile view og the page cut off come stuff.

--- a/resources/assets/less/inspinia/custom.less
+++ b/resources/assets/less/inspinia/custom.less
@@ -226,3 +226,7 @@ body:not(.fixed-sidebar):not(.canvas-menu).mini-navbar .nav li:hover > .nav-seco
 .mini-navbar .nav-second-level li:last-child {
     margin-bottom: 2px;
 }
+
+body.mini-navbar #page-wrapper {
+    margin: 50px 0 0 70px;
+}
